# projects

./: .gitignore  .gitmodules  caps.py  repeat_no_mutation.py
adventurelib/: Cargo.toml  pyproject.toml  todo.txt
adventurelib/py/: env.py  main.py
adventurelib/src/: lib.rs
bash/: ht.sh  is_reddit.sh  journal  notebook
bash/definebot/: .env.sh  out.html  script.sh  words.txt
bash/figlet_textbox/: script.sh
cbe_game/: main.lua
cbe_game/.devcontainer/: Dockerfile  devcontainer.json
chat_rust/: Cargo.toml  Rocket.toml  message_logs.sqlite
chat_rust/.devcontainer/: devcontainer.json
chat_rust/src/: main.rs
chat_rust/templates/: main_window.html  main_window.html.j2
cyb.farm/: farthest_point  hws_cipher  sharp_eyes
data_science/: flake.nix  shell.nix
data_science/.devcontainer/: Dockerfile  devcontainer.json
data_science/scripting_languages/: assessment.ipynb  die_rolls.ipynb  (+10 more)
fetch/: Cargo.toml
figlet_textbox/: script.sh
flask_vdom_app/: flake.nix
gravity/: main.lua
haskell/: Html.hs
htmacro/: flake.nix  main.lisp
karel/: Cargo.toml  api.lua  build_lua_code.sh  flake.nix  main.lua  test.lua
karel/src/: build.rs  lib.rs
kate_website/: index.html  style.css
knights_move/: main.lua
library_enc_func/: .gitignore  flake.nix
lithp/: guess_the_number.lisp  hash_map.lisp  higher_order.lisp  infix.lisp
music_library/: Cargo.toml  songs.toml
pictures_app/: flake.nix
python/: compress.py  factor.py  get_factors.py  help_connor.py  lambda_calc.py  monads.py  primes.py  rev_guess.py  scratch7.bak.py  scratch7.py  test.py  yt_playlist.py
rust/noter/: Cargo.toml  run.sh
rust/noter/src/: main.rs
rust/tic-tac-toe--rust/: Cargo.toml
rust/tic-tac-toe--rust/src/: main.rs
rust/todo--rust/: Cargo.toml
rust/todo--rust/src/: main.bak.rs
scripting_languages/: assignment_3-1.ipynb  assignment_3-2.ipynb  assignment_4-1.ipynb  assignment_4-3.ipynb  assignment_5-1.py  other_thing.ipynb  seven_up_and_down.py
simple_ssg/: Cargo.toml  flake.nix
simple_ssg/articles/: curve_into_the_target.md  dont_delegate_understanding.md  hate_your_language.md  splitting_the_web.md  the_beekeeper_keepers.md  the_linux_guide.md  what_can_we_remove.md  write_in_plain_text.md
simple_ssg/src/: main.rs
simple_ssg/static/: new.css
simple_ssg/templates/: article.html.j2  article_list.html.j2
suad_python/: app.py  flake.nix
suad_rust/: Cargo.toml  Rocket.toml
suad_rust/.devcontainer/: devcontainer.json
suad_rust/src/: main.rs
suad_rust/static/: game.csv  style.css
suad_rust/templates/: game_tracker.html  game_tracker.html.j2
subnet_calc/: app.py  flake.nix
tagger/: Cargo.toml
temple_run/: main.lua
webcomponents/: card-style.css  index.html  script.js
(+195 files in other folders)
