[package]
name = "suad_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
itertools = "0.13.0"
list_comprehension_macro = "0.1.1"
polars = "0.41.3"
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["minijinja"] }
serde = "1.0.204"
serde_json = "1.0.120"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["macros", "migrate"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
