[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"
const_for = "0.1.4"
const_format = "0.2.32"
ndarray = "0.15.6"
savefile = "0.16.5"
savefile-derive = "0.16.5"
thiserror = "1.0.58"
